Document correct way of handling QQuickWindow::closing

A window that never closes will always prevent the application from
quitting. So the application must not reject the event when it's ok to
quit.

Update the documentation with a better snippet of code.

Fixes: QTBUG-98747
Pick-to: 6.2
Change-Id: I84ce18c3220f0cc06605b1ae2f07c3c0384d60b4
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>